// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleChatButton component open mobile always shows blurb sbg even when hidden is true 1`] = `
<button
  className="ToggleChatButton"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#333",
    }
  }
>
  <ChatBubbleIcon
    style={Object {}}
  />
</button>
`;

exports[`ToggleChatButton component open switches svgs 1`] = `
<button
  className="ToggleChatButton"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#333",
    }
  }
>
  <svg
    height="24"
    style={Object {}}
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M23 20.168l-8.185-8.187 8.185-8.174-2.832-2.807-8.182 8.179-8.176-8.179-2.81 2.81 8.186 8.196-8.186 8.184 2.81 2.81 8.203-8.192 8.18 8.192z"
    />
    X
  </svg>
</button>
`;

exports[`ToggleChatButton component rendering renders 1`] = `
<button
  className="ToggleChatButton"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#333",
    }
  }
>
  <ChatBubbleIcon
    style={Object {}}
  />
</button>
`;
